add page1 div and style for layout

--- a/style.css
+++ b/style.css
@@ -8,3 +8,9 @@ html, body{
     height: 100%;
     width: 100%;
 }
+
+#page1{
+    height: 100%;
+    width: 100%;
+    background-color: rgb(47, 168, 208);
+}
