--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+@font-face {
+    font-family: neu;
+    src: url(./neue-haas-grotesk-display-pro-cufonfonts/NeueHaasDisplayMediu.ttf);
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: neu;
 }
 
 html, body{
@@ -10,7 +16,94 @@ html, body{
 }
 
 #page1{
+    min-height: 100vh;
+    width: 100%;
+    background-color: #EFEAE3;
+    position: relative;
+    /* padding: 0 2vw; */
+}
+
+nav{
+    padding: 2.5vw 2vw;
+    width: 100%;
+  /*   background-color: red; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#nav-part2{
+    display: flex;
+    align-items: center;
+    gap: 1vw;
+}
+
+#nav-part2 h4{
+    padding: 10px 20px;
+    border: 1px solid #C6BBB5;
+    border-radius: 50px;
+    font-weight: 600;
+    color: #000000;
+    font-size: 18px;
+    position: relative;
+    transition: all ease 0.4s;
+    overflow: hidden;
+}
+
+#nav-part2 h4::after{
+    content: "";
+    position: absolute;
     height: 100%;
     width: 100%;
-    background-color: rgb(47, 168, 208);
+    background-color: black;
+    left: 0;
+    bottom: -100%;
+    border-radius: 50%;
+    transition: all ease 0.4s;
+}
+
+#nav-part2 h4:hover::after{
+    bottom: 0;
+    border-radius: 0;
+}
+
+#nav-part2 h4 a{
+    color: #000000;
+    text-decoration: none;
+    z-index: 9;
+    position: relative;
+}
+
+#nav-part2 h4:hover a{
+    color: #fff;
+}
+
+#center{
+    height: 77vh;
+    width: 100%;
+    /* background-color: orangered; */
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    border-bottom: 1px solid #BFBBB6;
+    padding: 4vw 3vw;
+}
+
+#left h3{
+    width: 30vw;
+    font-size: 2vw;
+    line-height: 2.4vw;
+}
+
+#center h1{
+    font-size: 10vw;
+    text-align: right;
+    line-height: 8.2vw;
+}
+
+#page1 video{
+    width: 100%;
+    border-radius: 50px;
+    padding: 1.6vw ;
+    margin-top: 2.5vw;
 }
