--- a/style.css
+++ b/style.css
@@ -106,4 +106,73 @@ nav{
     border-radius: 50px;
     padding: 1.6vw ;
     margin-top: 2.5vw;
+    position: relative;
+}
+
+#hero-shape{
+    position: absolute;
+    height: 36vw;
+    width: 46vw;
+    background-color: #FE370D;
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%;
+    right: 0;
+    top: 82vh;
+    filter: blur(20px);
+}
+
+#hero1{
+    height: 100%;
+    width: 100%;
+    border-top-left-radius: 50%;
+    background-color: #FE370D; 
+    border-bottom-left-radius: 50%;
+    filter: blur(20px);
+    position: absolute;
+}
+
+#hero2{
+    height: 30vw;
+    width: 30vw;
+    border-radius: 50%;
+    background-color: #FE370D; 
+    filter: blur(25px);
+    position: absolute;
+    animation-name: anime2;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+#hero3{
+    height: 30vw;
+    width: 30vw;
+    border-radius: 50%;
+    background-color: #FE370D; 
+    filter: blur(25px);
+    position: absolute;
+    animation-name: anime;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes anime{
+    from{
+        transform: translate(25%, -10%);
+    }
+    to{
+        transform: translate(10%, 10%);
+    }
+}
+
+@keyframes anime2{
+    from{
+        transform: translate(5%, -5%);
+    }
+    to{
+        transform: translate(-20%, 20%);
+    }
 }
