add page3 elements with images and enhance fixed image display styles

--- a/style.css
+++ b/style.css
@@ -342,10 +342,15 @@ nav{
 }
 
 #fixed-img{
-    height: 30vw;
-    width: 22w;
-    background-color: red;
+    height: 28vw;
+    width: 24vw;
+    /* background-color: red; */
     border-radius: 10px;
     position: fixed;
     z-index: 99;
+    left: 50%;
+    top: 25%;
+    display: none;
+    background-size: cover;
+    background-position: center;
 }
