--- a/style.css
+++ b/style.css
@@ -27,6 +27,12 @@ html, body{
     width: 100%;
 }
 
+#main{
+   /*  background-color: #000; */
+    position: relative;
+    z-index: 10;
+}
+
 #page1{
     min-height: 100vh;
     width: 100%;
@@ -354,3 +360,71 @@ nav{
     background-size: cover;
     background-position: center;
 }
+
+#page4{
+    height: 60vh;
+    width: 100%;
+    background-color: #EFEAE3;
+}
+
+#page5{
+    height: 100vh;
+    width: 100%;
+    /* background-color: #000000; */
+}
+
+#footer{
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    background-color: #000000;
+    color: #fff;
+    z-index: 9;
+    bottom: 0;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    flex-direction: column;
+}
+
+#footer h1{
+    font-size: 23vw;
+}
+
+#footer-div{
+    height: 20vh;
+    width: 100%;
+}
+
+ .swiper {
+      width: 100%;
+      height: 100%;
+    }
+
+    .swiper-slide {
+      text-align: center;
+      font-size: 18px;
+      background: #444;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .swiper-slide img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .swiper-slide {
+      width: 60%;
+    }
+
+    .swiper-slide:nth-child(2n) {
+      width: 40%;
+    }
+
+    .swiper-slide:nth-child(3n) {
+      width: 20%;
+    }
